Setup eslint and prettier

--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/toblu/advent-of-code-client/issues"
   },
-  "homepage": "https://github.com/toblu/advent-of-code-client#readme"
+  "homepage": "https://github.com/toblu/advent-of-code-client#readme",
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "prettier": "2.2.1"
+  }
 }
