--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "cache-conf": "^0.6.0",
     "date-fns": "^2.16.1",
+    "emojic": "^1.1.16",
     "node-fetch": "^2.6.1"
   }
 }
