--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,9 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "no-await-in-loop": "off",
+    "no-plusplus": "off",
+    "no-underscore-dangle": "off"
   }
 }
