--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "homepage": "https://github.com/toblu/advent-of-code-client#readme",
   "devDependencies": {
+    "@types/node": "^17.0.7",
+    "@types/node-fetch": "^2.5.12",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "cache-conf": "^0.6.0",
